# tnl-lbm

./: .clang-format  .clangd  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .typos.toml  CMakeLists.txt  CMakePresets.json  Config.cmake.in  LICENSE  README.md  compareScript.sh  compareScriptCPU.sh  compareScriptGPU.sh  job.sh  job_off.sh  job_on.sh  makeIBMPerformanceTables.py  performanceTables.py  pydiff.py  runAllSims.sh  run_all_geometries.py  run_lbm_simulation.py
include/: CMakeLists.txt
include/lbm3d/: README.md  adios_writer.h  adios_writer.hpp  block_size_optimizer.h  checkpoint.h  core.h  d3q27_bc.h  d3q27_col_bgk.h  d3q27_col_bgk_well.h  d3q27_col_clbm.h  d3q27_col_clbm_fei.h  d3q27_col_clbm_well.h  d3q27_col_cum.h  d3q27_col_cum_sgs.h  d3q27_col_cum_well.h  d3q27_col_fclbm.h  d3q27_col_kbc_c.h  d3q27_col_kbc_n.h  d3q27_col_mrt.h  d3q27_col_srt.h  d3q27_col_srt_modif_force.h  d3q27_col_srt_well.h  d3q27_common.h  d3q27_eq.h  d3q27_eq_inv_cum.h  d3q27_macro.h  d3q27_streaming.h  d3q7_bc.h  d3q7_col_clbm.h  d3q7_col_clbm_RS.h  d3q7_col_mrt.h  d3q7_col_srt.h  d3q7_common.h  defs.h  dirac.h  fileutils.h  ibm_kernels.h  kernels.h  lagrange_3D.h  lagrange_3D.hpp  (+18 more)
include/lbm3d/d2q9/: bc.h  col_clbm.h  col_srt.h  common.h  eq.h  macro.h  streaming_AA.h  streaming_AB.h
include/lbm3d/d3q27/: bc.h  bc_orig.h  col_bgk.h  col_bgk_well.h  col_clbm.h  col_clbm_fei.h  col_clbm_well.h  col_cum.h  col_cum_sgs.h  col_cum_well.h  col_fclbm.h  col_kbc_c.h  col_kbc_n.h  col_mrt.h  col_srt.h  col_srt_modif_force.h  col_srt_well.h  common.h  common_well.h  eq.h  eq_entropic.h  eq_inv_cum.h  eq_well.h  macro.h  streaming_AA.h  streaming_AB.h
include/lbm3d/d3q7/: bc.h  col_clbm.h  col_clbm_RS.h  col_mrt.h  col_srt.h  common.h  eq.h  macro.h  streaming_AA.h  streaming_AB.h
include/lbm_common/: ciselnik.h  fileutils.h  logging.h  png_tool.h  ppolynomial.h  ppolynomial.hpp  spmatrix.h  sprectmatrix.h  sprectmatrix.hpp  timeutils.h
sim_2D/: CMakeLists.txt  README_sim2d_3.md  run  sim2d_1.cu  sim2d_2.cu  sim2d_3.cu
sim_NSE/: CMakeLists.txt  run  sim_1.cu  sim_2.cu  sim_3.cu  sim_4.cu  sim_5.cu  sim_IBM1.cu  sim_IBM2.cu  sim_IBM3.cu  sim_IBM4.cu
sim_NSE_ADE/: CMakeLists.txt  sim_T1.cu  sim_T2.cu
tests/: compare-IBM-matrices-CPU.sh  compare-IBM-matrices-GPU.sh  compare-IBM-matrices.sh
tests/baseline_ibm_matrices/: matrix-A_method-0_dirac-1.mtx  matrix-A_method-1_dirac-1.mtx  matrix-A_method-1_dirac-2.mtx  matrix-A_method-1_dirac-4.mtx  matrix-A_method-original_dirac-3.mtx  matrix-M_method-0_dirac-3.mtx  matrix-M_method-0_dirac-4.mtx  matrix-M_method-modified_dirac-2.mtx  matrix-M_method-original_dirac-1.mtx
tests/subproject/: CMakeLists.txt  main.cu
